test/Fail/Issue1903.agda

postulate
  foo : Set
  bar : Set

baz : Set → Set
baz fooo = Fooo
