test/Fail/Issue1903.err
Issue1903.agda:7.12-16: error: [NotInScope]
Not in scope:
  Fooo at Issue1903.agda:7.12-16
    (did you mean
       'foo' or
       'fooo'?)
when scope checking Fooo
